@@ -92,18 +92,38 @@ ext {
     println "OS Detected: " + osdetector.os
 }
 
+def modulesToOpen = [
+        'java.desktop/java.awt',
+        'java.desktop/java.awt.geom',
+        'java.desktop/sun.awt.geom',
+        'java.base/java.util',
+        'javafx.web/javafx.scene.web',
+        'javafx.web/com.sun.webkit',
+        'javafx.web/com.sun.webkit.dom',
+        'java.base/java.lang',
+        'java.desktop/sun.awt',
+        'java.desktop/sun.java2d',
+        'java.desktop/javax.swing',
+        'java.desktop/sun.awt.shell',
+        'java.desktop/com.sun.java.swing.plaf.windows'
+]
+def jarManifestAttributes = [
+        'Implementation-Title': project.name + developerRelease,
+        'Implementation-Version': tagVersion,
+        'Implementation-Vendor': vendor,
+        'Git-Commit': revision,
+        'Git-Commit-SHA': revisionFull,
+        'Built-By': System.getProperty('user.name'),
+        'Built-Date': new Date(),
+        'Built-JDK': System.getProperty('java.version'),
+        'Source-Compatibility': project.java.sourceCompatibility,
+        'Target-Compatibility': project.java.targetCompatibility,
+        'Main-Class': project.application.mainClass,
+        'Add-Opens': modulesToOpen.join(' '),
+]
 def javaArgs = [
-        "-Xss8M", "-Dsun.java2d.d3d=false", "-Dfile.encoding=UTF-8",
-        "-Dpolyglot.engine.WarnInterpreterOnly=false",
-        "-Djava.util.Arrays.useLegacyMergeSort=true",
-        "-DMAPTOOL_DATADIR=.maptool-" + vendor.toLowerCase(), "-XX:+ShowCodeDetailsInExceptionMessages",
-        "--add-opens=java.desktop/java.awt=ALL-UNNAMED", "--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED",
-        "--add-opens=java.desktop/sun.awt.geom=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=javafx.web/javafx.scene.web=ALL-UNNAMED", "--add-opens=javafx.web/com.sun.webkit=ALL-UNNAMED",
-        "--add-opens=javafx.web/com.sun.webkit.dom=ALL-UNNAMED","--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED", "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
-        "--add-opens=java.desktop/javax.swing=ALL-UNNAMED","--add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED",
-        "--add-opens=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED"]
+        "-Xss8M",
+] + modulesToOpen.collect { '--add-opens=' + it + '=ALL-UNNAMED' }
 
 // Used by gradle assemble & run tasks
 application {
@@ -137,7 +157,6 @@ javafx {
 }
 
 run {
-    args = ['-v=' + appSemVer]
     // Add -Dlog4j2.debug to see log4j2 details
     // Add  -Djavax.net.debug=all to debug networking issues
 
@@ -360,7 +379,7 @@ dependencies {
     implementation(libs.okhttp)
 
     implementation(libs.bundles.imageio)
-    implementation(libs.batik)
+    implementation(libs.bundles.batik)
     implementation(libs.bundles.pdfbox)
     implementation(libs.bcmail)
     implementation(libs.bundles.jai.imageio)
@@ -419,11 +438,6 @@ dependencies {
     implementation(libs.rptools.maptool.addons)
     implementation(libs.rptools.dice.roller)
     implementation(libs.noiselib)
-
-    // libgdx
-    implementation(libs.bundles.gdx)
-    implementation(variantOf(libs.gdx.platform) { classifier('natives-desktop')})
-    implementation(variantOf(libs.gdx.freetype.platform) { classifier('natives-desktop')})
 }
 
 processResources {
@@ -451,18 +465,8 @@ shadowJar {
     archiveClassifier = null
 
     manifest {
-        attributes 'Implementation-Title': project.name + developerRelease,
-                'Implementation-Version': tagVersion,
-                'Implementation-Vendor': vendor,
-                'Git-Commit': revision,
-                'Git-Commit-SHA': revisionFull,
-                'Built-By': System.getProperty('user.name'),
-                'Built-Date': new Date(),
-                'Built-JDK': System.getProperty('java.version'),
-                'Source-Compatibility': project.java.sourceCompatibility,
-                'Target-Compatibility': project.java.targetCompatibility,
-                'Main-Class': project.application.mainClass,
-                'Multi-Release': true
+        attributes jarManifestAttributes
+        attributes 'Multi-Release': true
     }
 
     exclude 'module-info.class' //This is to make sure maptool doesn't become a module by including module-info of dependencies. Probably needs to be fixed before we go to jdk 11+
@@ -470,17 +474,7 @@ shadowJar {
 
 jar {
     manifest {
-        attributes 'Implementation-Title': project.name + developerRelease,
-                'Implementation-Version': tagVersion,
-                'Implementation-Vendor': vendor,
-                'Git-Commit': revision,
-                'Git-Commit-SHA': revisionFull,
-                'Built-By': System.getProperty('user.name'),
-                'Built-Date': new Date(),
-                'Built-JDK': System.getProperty('java.version'),
-                'Source-Compatibility': project.java.sourceCompatibility,
-                'Target-Compatibility': project.java.targetCompatibility,
-                'Main-Class': project.application.mainClass
+        attributes jarManifestAttributes
     }
 }
 
@@ -507,4 +501,14 @@ javadoc {
 
 task createWrapper(type: Wrapper) {
     gradleVersion = '8.2.1'
+}
+
+tasks.withType(Test).configureEach {
+    testLogging {
+        events "failed", "skipped"
+        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+        showExceptions true
+        showCauses true
+        showStackTraces true
+    }
 }
